# trog

./: .gitignore  CRITICAL_REVIEW_V4.md  DATA_TABLES_BACKUP.md  EQUIPMENT_4SLOT_NOTES.md  FEATURE_UPDATE_NOTES.md  FEATURE_UPDATE_V2_NOTES.md  FEATURE_UPDATE_V3_NOTES.md  FEATURE_UPDATE_V4_NOTES.md  INVENTORY_AND_STATS_NOTES.md  KICK_AND_COMBO_BUFF_NOTES.md  README.md  REGRESSION_AUDIT_NOTES.md  SCENE_IMAGE_FEATURE_NOTES.md  SYSTEM_AUDIT_FIXES.md  WRAPPER_FIX_NOTES.md  방법.md  시작하기.md
claude-code-openai-wrapper/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_win.py
claude-code-openai-wrapper/docs/: MIGRATION_STATUS.md  UPGRADE_PLAN.md
claude-code-openai-wrapper/examples/: curl_example.sh  openai_sdk.py  session_continuity.py  session_curl_example.sh  streaming.py
claude-code-openai-wrapper/src/: __init__.py  auth.py  claude_cli.py  constants.py  main.py  mcp_client.py  message_adapter.py  models.py  parameter_validator.py  rate_limiter.py  session_manager.py  tool_manager.py
claude-code-openai-wrapper/tests/: conftest.py  test_anthropic_messages.py  test_auth_unit.py  test_basic.py  test_claude_cli_unit.py  test_docker_workspace.sh  test_endpoints.py  test_mcp_client_unit.py  test_message_adapter_unit.py  test_models_unit.py  test_non_streaming.py  test_parameter_mapping.py  test_parameter_validator_unit.py  test_property_based.py  test_rate_limiter_unit.py  test_sdk_migration.py  test_sdk_quick.py  test_session_complete.py  test_session_continuity.py  test_session_manager_unit.py  test_session_simple.py  test_textblock_fix.py  test_tool_execution.py  (+2 more)
(+98 files in other folders)
